[package]
name = "wx-sdk"
version = "0.0.2"
authors = ["johny.li <gradle@qq.com>"]
edition = "2018"
description = "A Wechat SDK written in Rust"
readme = "README.md"
documentation = "https://docs.rs/wx-sdk/"
homepage = "https://github.com/ilovelll/wx-sdk"
repository = "https://github.com/ilovelll/wx-sdk"
license = "MIT"
keywords = ["wechat", "wexin", "sdk"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mp"]
mp = []
pay = []
mxa = []
op =[]

[dependencies]
anyhow = "1.0"
bytes = { version = "1.0", features = ["serde"] }
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
# quick-xml = { version = "0.20", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
roxmltree = { version = "0.14", features = [ "std" ] }
xmlwriter = "0.1"
# exile = "0.0.7"
sha-1 = "0.9"
block-modes = "0.8.1"
aes = "0.7.4"
hex-literal = "0.3.3"
base64ct = "1.0.0"

[build-dependencies]
tokio-test = "0.4"
